--- a/Alicegear/mystyle.css
+++ b/Alicegear/mystyle.css
@@ -1,3 +1,36 @@
+html {
+  font-family: 'Courier New', Courier, monospace;
+}
+
 body {
     background-color: #faebd7;
   }
+
+nav {
+  text-align: center;
+  margin: 20px 0;
+}
+img {
+display:block;
+margin:0 auto;
+}
+
+nav ul {
+list-style-type: none;
+padding:0;
+}
+
+nav li {
+  display: inline-block;
+}
+
+nav li a {
+display: block;
+font-size: 24px;
+font-weight: bold;
+text-decoration: none;
+margin: 0 20px;
+width: 125px;
+height: 25px;
+}
+
