--- a/Alicegear/mystyle.css
+++ b/Alicegear/mystyle.css
@@ -8,7 +8,7 @@ body {
 
 nav {
   text-align: center;
-  margin: 20px 10;
+  margin: 20px 10px;
   background-color:tan;
 border-radius: 10px;
 }
@@ -45,7 +45,6 @@ border-style: solid;
 }
 
 .header1 {
-  font-style: bold;
   border-style: solid;
 }
 .header2 {
