--- a/Alicegear/mystyle.css
+++ b/Alicegear/mystyle.css
@@ -1,70 +1,97 @@
+/*Global Styles*/
+
+
+body {
+  background-color: #faebd7;
+}
+
+img {
+  display:block; 
+  margin: 0 auto;
+  width: 100%;
+}
+
+
 html {
   font-family: 'Courier New', Courier, monospace;
 }
 
-body {
-    background-color: #faebd7;
-  }
-
-nav {
-  text-align: center;
-  margin: 20px 10px;
-  background-color:tan;
-border-radius: 10px;
-}
-img {
-display:block;
-margin:0 auto;
-}
-
-nav ul {
-list-style-type: none;
-padding:0;
-}
-
-nav li {
-  display: inline-block;
-}
-
-nav li a {
-display: block;
-font-size: 24px;
-font-weight: bold;
-text-decoration: none;
-margin: 0 20px;
-width: 125px;
-height: 25px;
-}
-
 #container {
-padding: 10px;
+background-color: tan;
 }
 
-#banner {
-border-style: solid;
-}
 
-.header1 {
-  border-style: solid;
-}
-.header2 {
+/* Mobile Styles */
+
+@media (min-width: 320px) {
+  nav { background-color: tan;
+  padding: 5px;
+margin-top: 10px;
 text-align: center;
 }
 
-.footer1 {
-  border-style:solid;
-}
-hr 
-{
-padding: 10px;
-}
-section {
-  float: left;
-  width: 50%
+nav ul {
+  list-style-type: none;
+  padding: 0;
+} 
+
+nav li {
+display: block;
 }
 
-aside {
-  float:right;
-  width: 50%;
+nav li a {
+  display: block;
+  height: 30px;
+  color:black;
+  font-size: 24px;
+  text-decoration: none;
+  margin-top: 5px; 
+}
+main {
+  padding: 20px;
+  }
 
+  h1, h2, h3 {
+    text-align: center;
+      }
+      
+footer {
+  text-align: center;
+  padding: 40px;
+}
+}
+
+/* Tablet Styles */
+
+@media (min-width: 768px) {
+  nav li {
+    display: inline-block;
+  }
+  nav li a {
+    width: 150px;
+    height: 50px;
+    line-height: 50px;
+    margin: 5px;
+  }
+}
+
+/*Desktop Styles*/
+
+@media (min-width: 1024px) {
+  nav { 
+padding: 0;
+
+  }
+  hr {
+    display: none;
+  }
+}
+
+#multi_col {
+  display: flex;
+}
+
+.col {
+  display: inline-flex;
+  flex-direction: column;
 }
