--- a/Alicegear/mystyle.css
+++ b/Alicegear/mystyle.css
@@ -3,8 +3,14 @@
 
 body {
   background-color: #faebd7;
+  background-image: url('Pictures/m81camo.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+ 
 }
-
+main {
+  background-color: #faebd7;}
 img {
   display:block; 
   margin: 0 auto;
@@ -19,7 +25,13 @@ html {
 
 #container {
 background-color: tan;
+border-radius: 10px;
+padding: 10px;
+width: 75%;
+margin: 20px auto;
 }
+
+
 
 
 /* Mobile Styles */
@@ -81,6 +93,7 @@ footer {
 @media (min-width: 1024px) {
   nav { 
 padding: 0;
+border-radius: 10px;
 
   }
   hr {
