Final Update Mk1A1

--- a/Alicegear/mystyle.css
+++ b/Alicegear/mystyle.css
@@ -3,7 +3,7 @@
 
 body {
   background-color: #faebd7;
-  background-image: url('Pictures/m81camo.jpg');
+  background-image: url('Pictures/erdl.jpeg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
