--- a/Alicegear/mystyle.css
+++ b/Alicegear/mystyle.css
@@ -27,7 +27,7 @@ html {
 background-color: tan;
 border-radius: 10px;
 padding: 10px;
-width: 75%;
+
 margin: 20px auto;
 }
 
@@ -81,7 +81,7 @@ footer {
     display: inline-block;
   }
   nav li a {
-    width: 150px;
+    width: 250px;
     height: 50px;
     line-height: 50px;
     margin: 5px;
@@ -99,6 +99,10 @@ border-radius: 10px;
   hr {
     display: none;
   }
+
+
+#container {
+  width: 75%;
 }
 
 #multi_col {
@@ -106,7 +110,7 @@ border-radius: 10px;
 }
 
 .col {
-  display: inline-flex;
-  flex-direction: column;
   width: 50%;
 }
+
+} 
